[metadata]
name = ncbi-dogslow
author = python-study
author_email = python-study@ncbi.nlm.nih.gov
license = "GNU LGPL"
classifier =
        Development Status :: 4 - Beta
        Framework :: Django
        Intended Audience :: Developers
        License :: OSI Approved :: GNU Library or Lesser General Public License (LGPL))
        Natural Language :: English
        Operating System :: OS Independent
        Programming Language :: Python :: 2.5
        Programming Language :: Python :: 2.6
        Programming Language :: Python :: 2.7
        Programming Language :: Python :: 3.3
        Programming Language :: Python :: 3.4
        Topic :: Software Development :: Debuggers
        Topic :: Utilities
keyword =
	django
	debug
	watchdog
	middleware
	traceback

[files]
packages_root = src

[bdist_wheel]
universal = 1
